--- a/package.json
+++ b/package.json
@@ -12,5 +12,13 @@
   "dependencies": {
     "discord.js": "^14.24.2",
     "dotenv": "^17.2.3"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/LaugeSvan/NerdBot.git"
+  },
+  "bugs": {
+    "url": "https://github.com/LaugeSvan/NerdBot/issues"
+  },
+  "homepage": "https://github.com/LaugeSvan/NerdBot#readme"
 }
